--- a/app/src/main/res/layout/activity_ayakorlisten.xml
+++ b/app/src/main/res/layout/activity_ayakorlisten.xml
@@ -15,7 +15,7 @@
             android:id="@+id/player_header_bg"
             android:layout_width="fill_parent"
             android:layout_height="60dip"
-            android:background="@layout/bg_player_header"
+            android:background="@drawable/bg_player_header"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:layout_weight="0">
@@ -54,7 +54,7 @@
             android:id="@+id/player_footer_bg"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@layout/bg_player_footer"
+            android:background="@drawable/bg_player_footer"
             android:gravity="center"
             android:layout_weight="0">
 
