--- a/app/src/main/res/layout/activity_notifications_messages.xml
+++ b/app/src/main/res/layout/activity_notifications_messages.xml
@@ -12,10 +12,10 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:background="@drawable/around_line3"
-        android:theme="@style/AppTheme.AppBarOverlay"
+        android:fitsSystemWindows="true"
         android:layoutDirection="ltr"
+        android:theme="@style/AppTheme.AppBarOverlay"
         tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.Toolbar
@@ -24,25 +24,25 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@drawable/around_line3"
             app:layout_collapseMode="pin"
-            app:titleTextAppearance="@style/TitleToolBarApppearance"
-            app:popupTheme="@style/TextAppearance.AppCompat">
+            app:popupTheme="@style/TextAppearance.AppCompat"
+            app:titleTextAppearance="@style/TitleToolBarApppearance">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="end"
-                android:layout_gravity="end">
+                android:layout_gravity="end"
+                android:gravity="end">
 
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/toolbar_title"
+                    style="@style/TextAppearance.MyApp.Title.QiblahActivity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="اقتباسات عشوائية"
-                    style="@style/TextAppearance.MyApp.Title.QiblahActivity"
-                    android:gravity="end"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_marginEnd="16dp"
+                    android:gravity="end"
+                    android:text="اقتباسات عشوائية" />
 
             </LinearLayout>
 
@@ -56,23 +56,65 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <LinearLayout
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rec"
         android:layout_width="match_parent"
-        android:layout_weight="3"
-        android:layout_height="0dp">
-        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_height="match_parent"
+        android:background="#F6F8FA"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
+
+
+    <LinearLayout
+        android:id="@+id/no_internet_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:visibility="gone">
+
+        <!-- Lottie Animation -->
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rec"
-                android:background="#F6F8FA"
+            android:layout_height="200dp"
+            android:layout_marginTop="15dp"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="login.json"
+            app:lottie_loop="true" />
+
+        <!-- Message Card -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:cardBackgroundColor="#fff"
+            app:cardCornerRadius="8dp">
+
+            <TextView
+                style="@style/TextAppearance.AllTextView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="8dp" />
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/jazeera"
+                android:padding="25dp"
+                android:text="@string/no_internet_connection"
+                android:textColor="#000"
+                android:textSize="20sp" />
+        </androidx.cardview.widget.CardView>
 
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Retry Button -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/retry_button"
+            android:layout_width="250dp"
+            android:layout_height="65dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/around_line3"
+            android:fontFamily="@font/jazeera"
+            android:text="@string/try_again"
+            android:textColor="#fff"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
