--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -155,12 +155,11 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:onClick="moshafmolem"
+                                android:id="@+id/quran_learning"
                                 android:layout_width="0dp"
                                 android:layout_height="65dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/buoo"
-                                android:clickable="true"
                                 android:descendantFocusability="blocksDescendants"
                                 android:gravity="center"
                                 android:orientation="horizontal"
