Edit quran reading

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -193,12 +193,11 @@
                             android:weightSum="2">
 
                             <LinearLayout
-                                android:onClick="quranphotos"
+                                android:id="@+id/quran_reading"
                                 android:layout_width="0dp"
                                 android:layout_height="65dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/buoo"
-                                android:clickable="true"
                                 android:descendantFocusability="blocksDescendants"
                                 android:gravity="center"
                                 android:orientation="horizontal"
