--- a/app/src/main/res/layout/activity_quran_read.xml
+++ b/app/src/main/res/layout/activity_quran_read.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".quranread.newquran.QuranRead">
+    tools:context=".quran.quran_reading.QuranRead">
 
     <FrameLayout
         android:layout_width="match_parent"
