--- a/app/src/main/res/layout/fragment_surah.xml
+++ b/app/src/main/res/layout/fragment_surah.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <LinearLayout
@@ -15,50 +13,60 @@
 
         <LinearLayout
             android:id="@+id/bookmark"
-            android:padding="5dp"
-            android:background="@color/new_one"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/new_one"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/back_button"
+                android:layout_width="40dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/ic_back_button" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right" >
+                android:gravity="center">
 
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/quread_animation"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_gravity="center"
                     app:lottie_autoPlay="true"
                     app:lottie_fileName="bookmark.json"
-                    android:layout_gravity="center"
                     app:lottie_repeatCount="3" />
+
                 <TextView
-                    android:gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
-                    android:text="العلامات"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
                     android:fontFamily="@font/cairo_bold"
-                    android:textColor="#FFFFFF"/>
+                    android:gravity="center"
+                    android:text="العلامات"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
+
+
         </LinearLayout>
 
 
-
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/suraRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/suraRecyclerView"/>
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
-
 
 
 </FrameLayout>
