--- a/app/src/main/res/layout/recites_ticket.xml
+++ b/app/src/main/res/layout/recites_ticket.xml
@@ -1,71 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:paddingTop="2dp"
-    android:layoutDirection="rtl"
-    android:paddingBottom="2dp"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_marginTop="2pt"
-        android:paddingBottom="4pt"
-        android:paddingTop="4pt"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="5dp"
+    android:layoutDirection="rtl">
 
-        android:background="@drawable/menuback"
-        android:orientation="horizontal"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/menuback"
+        android:paddingVertical="4dp"
+        android:layout_marginTop="2dp">
 
         <ImageView
-            android:background="@drawable/menuback"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
+            android:id="@+id/imgchannel"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/imgchannel"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:src="@drawable/quran_recites"
-            android:layout_marginLeft="7dp"
-            android:layout_weight="0" />
+            android:layout_marginStart="7dp" />
 
         <TextView
-
-            android:gravity="right"
-            android:background="@drawable/menuback"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
             android:id="@+id/txtRecitesName"
-            android:layout_toLeftOf="@+id/imgchannel"
-            android:layout_alignBottom="@+id/imgchannel"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:paddingTop="8dp"
-            android:paddingRight="7dp"
-            android:textSize="20dp"
-            android:layout_weight="1" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:text="Large Text"
+            android:textSize="20sp"
+            android:paddingEnd="7dp" />
 
         <ImageView
-            android:background="@drawable/menuback"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
+            android:id="@+id/imageView"
             android:layout_width="20dp"
             android:layout_height="25dp"
-            android:id="@+id/imageView"
-            android:paddingTop="5dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:src="@drawable/backirrow"
-
-            android:layout_weight="0" />
+            android:layout_marginStart="8dp" />
     </LinearLayout>
 </LinearLayout>
