--- a/app/src/main/res/layout/activity_quran_reading.xml
+++ b/app/src/main/res/layout/activity_quran_reading.xml
@@ -3,52 +3,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:background="#f7e0a3"
     android:layout_height="match_parent"
-    tools:context=".sql0title098">
+    android:background="#f7e0a3"
+    android:orientation="vertical"
+    tools:context=".quran.quran_reading_v2.QuranReadingActivity">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_height="wrap_content">
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/back_button"
+                android:layout_width="40dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="30dp"
+                android:background="@drawable/ic_back_button" />
 
             <androidx.cardview.widget.CardView
+                android:layout_width="43dp"
+                android:layout_height="43dp"
                 android:layout_margin="4dp"
-                app:cardElevation="8dp"
                 android:onClick="plus"
                 app:cardBackgroundColor="#ff7bb0"
-                android:layout_width="43dp"
                 app:cardCornerRadius="25dp"
-                android:layout_height="43dp">
+                app:cardElevation="8dp">
+
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:id="@+id/iconplus"
-                    android:onClick="plus"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
+                    android:onClick="plus"
                     android:scaleType="center"
                     app:materialIcon="plus"
                     app:materialIconColor="#FFFFFF"
                     app:materialIconSize="40dp" />
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
+                android:layout_width="43dp"
+                android:layout_height="43dp"
                 android:layout_margin="4dp"
                 android:onClick="minus"
-                app:cardElevation="8dp"
                 app:cardBackgroundColor="#ff7bb0"
-                android:layout_width="43dp"
                 app:cardCornerRadius="25dp"
-                android:layout_height="43dp">
+                app:cardElevation="8dp">
+
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:id="@+id/shareabout"
-                    android:onClick="minus"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
+                    android:onClick="minus"
                     android:scaleType="center"
                     app:materialIcon="minus"
                     app:materialIconColor="#FFFFFF"
@@ -58,18 +72,19 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="43dp"
-                android:onClick="star"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="8dp"
-                app:cardBackgroundColor="#32dbc6"
+                android:layout_height="43dp"
                 android:layout_margin="4dp"
-                android:layout_height="43dp">
+                android:onClick="star"
+                app:cardBackgroundColor="#32dbc6"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="8dp">
+
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:layout_width="40dp"
-                    android:layout_gravity="center"
                     android:layout_height="40dp"
-                    android:scaleType="center"
+                    android:layout_gravity="center"
                     android:onClick="star"
+                    android:scaleType="center"
                     app:materialIcon="star"
                     app:materialIconColor="#FFFFFF"
                     app:materialIconSize="40dp" />
@@ -77,40 +92,43 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/screen_on"
-                android:visibility="visible"
                 android:layout_width="43dp"
-                android:onClick="star"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="8dp"
-                app:cardBackgroundColor="#32dbc6"
+                android:layout_height="43dp"
                 android:layout_margin="4dp"
-                android:layout_height="43dp">
+                android:onClick="star"
+                android:visibility="visible"
+                app:cardBackgroundColor="#32dbc6"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="8dp">
+
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:layout_width="40dp"
-                    android:layout_gravity="center"
                     android:layout_height="40dp"
-                    android:scaleType="center"
+                    android:layout_gravity="center"
                     android:onClick="screenOn"
+                    android:scaleType="center"
                     app:materialIcon="eye"
                     app:materialIconColor="#FFFFFF"
                     app:materialIconSize="40dp" />
             </androidx.cardview.widget.CardView>
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/screen_off"
-                android:visibility="gone"
                 android:layout_width="43dp"
-                android:onClick="star"
-                app:cardCornerRadius="25dp"
-                app:cardElevation="8dp"
-                app:cardBackgroundColor="#32dbc6"
+                android:layout_height="43dp"
                 android:layout_margin="4dp"
-                android:layout_height="43dp">
+                android:onClick="star"
+                android:visibility="gone"
+                app:cardBackgroundColor="#32dbc6"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="8dp">
+
                 <net.steamcrafted.materialiconlib.MaterialIconView
                     android:layout_width="40dp"
-                    android:layout_gravity="center"
                     android:layout_height="40dp"
-                    android:scaleType="center"
+                    android:layout_gravity="center"
                     android:onClick="screenOn"
+                    android:scaleType="center"
                     app:materialIcon="eye_off"
                     app:materialIconColor="#FFFFFF"
                     app:materialIconSize="40dp" />
@@ -126,92 +144,100 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:background="@drawable/des00sql"
-            android:layout_margin="10dp"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:layout_margin="10dp"
+            android:background="@drawable/des00sql"
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
                     <TextView
                         android:id="@+id/ooo03"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_margin="5dp"
-                        android:gravity="center"
-                        android:textSize="11sp"
                         android:fontFamily="@font/flat"
+                        android:gravity="center"
+                        android:lineSpacingExtra="5dp"
+                        android:shadowColor="#011925"
                         android:shadowDx="2"
                         android:shadowDy="2"
-                        android:shadowColor="#011925"
                         android:textColor="#C2185B"
-                        android:textStyle="bold"
-                        android:lineSpacingExtra="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:textSize="11sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
                     <TextView
                         android:id="@+id/ooo02"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_margin="5dp"
-                        android:gravity="center"
-                        android:textSize="13sp"
                         android:fontFamily="@font/flat"
+                        android:gravity="center"
+                        android:lineSpacingExtra="5dp"
+                        android:shadowColor="#011925"
                         android:shadowDx="2"
                         android:shadowDy="2"
-                        android:shadowColor="#011925"
                         android:textColor="#800000"
-                        android:textStyle="bold"
-                        android:lineSpacingExtra="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:textSize="13sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:gravity="right"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content">
+                    android:gravity="right">
+
                     <TextView
                         android:id="@+id/ooo01"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_margin="5dp"
-                        android:gravity="center"
-                        android:textSize="11dp"
                         android:fontFamily="@font/flat"
+                        android:gravity="center"
+                        android:lineSpacingExtra="5dp"
+                        android:shadowColor="#011925"
                         android:shadowDx="2"
                         android:shadowDy="2"
-                        android:shadowColor="#011925"
                         android:textColor="#C2185B"
-                        android:textStyle="bold"
-                        android:lineSpacingExtra="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:textSize="11dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
 
             </LinearLayout>
+
             <TextView
                 android:id="@+id/ts"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:text="ffd"
                 android:gravity="center"
-                android:textSize="20sp"
+                android:lineSpacingExtra="5dp"
+                android:shadowColor="#011925"
                 android:shadowDx="2"
                 android:shadowDy="2"
-                android:shadowColor="#011925"
+                android:text="ffd"
                 android:textColor="#00101A"
-                android:textStyle="bold"
-                android:lineSpacingExtra="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
